# play-event-driven-db

./: Pipfile  app.py  compose.yml  launch_all.sh  send_random_requests.py
appcontent/: queries.py
containers/db/: Dockerfile
containers/web/: Dockerfile
database/: create-db.sql
migrations/: 01.sql  db-entrypoint.sh
svc-events/: pyproject.toml  run_app.py
svc-events/events/: app.py  config.py  customer_db.py  db_interactions.py
