[tool.poetry]
name = "svc-events"
version = "0.1.0"
description = ""
authors = ["Gnonpi <legnonpi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^19.9"
flask = "^1.1"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
